--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+table {
+    border-spacing:60px;
+}
+
+td, th {
+    padding: 3px;
+    text-align: left;
+
+}
+
 #header {
     border: 1px solid #b5b7ba;
     background-color: #dfdfdf;
@@ -113,10 +123,11 @@ body {
 #content #box {
     background-color: #ffffff;
     width: 1238px;
-    height: 1238px;
+    height: auto;
     margin: 0 auto;
     padding-top: 37px;
     padding-left: 38px;
+
 }
 
 #content #box p {
@@ -124,8 +135,9 @@ body {
     font-size: 24px;
     font-weight: 100;
     text-align: left;
-    margin-top: 37px;
+    margin-top: 15px;
     margin-bottom: 30px;
+
 }
 
 #content #box input {
